# btc-algo-trader

./: README.md  main.py  pyproject.toml
src/backtest/: engine.py
src/data/: market_data.py
src/strategy/: base_strategy.py  sma_crossover.py
