[tool.poetry]
name = "bitcoin-trading-bot"
version = "0.1.0"
description = "A Bitcoin trading bot strategy framework with backtesting capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
ccxt = "^4.4.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
ta-lib = "^0.4.32"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
plotly = "^5.24.0"
scikit-learn = "^1.5.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
aiohttp = "^3.10.0"
asyncio-throttle = "^1.0.2"
python-dateutil = "^2.9.0"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.8.0"
flake8 = "^7.1.0"
isort = "^5.13.0"
mypy = "^1.13.0"
ruff = "^0.7.0"

[tool.poetry.scripts]
trading-bot = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true